--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="/Images/port1.jpg" alt="project2">
+                    <img src="/Images/about.jpeg" alt="project2">
                     <div class="card-info">
                         <h3>Project here</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing</p>
